fix: truncate class cutting off descenders

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -36,7 +36,7 @@ body {
   text-overflow: ellipsis;
   overflow: hidden;
   line-height: var(--lh);
-  max-height: calc(var(--lines) * var(--lh));
+  max-height: calc(var(--lines) * var(--lh) * 1.1);
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: var(--lines);
